--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Software developer...</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>IL...</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Golf...</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Not sure yet...</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>IL...</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>It's fun...</p>
     </section>
 
     <footer id="footer">
